@@ -181,8 +181,9 @@ struct _bug_554833 {
 struct _bug_554833 *
                 bug_554833_new (void);
 
+#define GTKDOC_GNUC_CONST
 
-int bug_574654a(void) G_GNUC_CONST;
+int bug_574654a(void) GTKDOC_GNUC_CONST;
 void bug_574654b(double offset);
 
 
